[tool.poetry]
name = "pecs-framework"
version = "1.1.0"
description = "The ✨Respectably Muscled✨ Python Entity Component System"
authors = ["Jonathan Crum <crumja4@gmail.com>"]
readme = 'README.md'
repository = 'https://github.com/krummja/PECS'
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: Implementation :: CPython'
]
include = [
    "README.md",
    "LICENSE.txt"
]

[tool.poetry.dependencies]
python = "3.8 || 3.9 || ^3.10"
deepmerge = "1.0.1"
numpy = "^1.23.4"
rich = "^12.6.0"
pytest = "^7.2.0"
beartype = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
addopts = ["-rP"]
testpaths = [
    "tests",
]
