[tool.poetry]
name = "pecs-framework"
version = "1.3.0"
description = "The ✨Respectably Muscled✨ Python Entity Component System"
authors = ["Jonathan Crum <crumja4@gmail.com>"]
readme = 'README.md'
repository = 'https://github.com/krummja/PECS'
classifiers = [
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Operating System :: OS Independent',
    'Programming Language :: Python :: Implementation :: CPython'
]
include = [
    "README.md",
    "LICENSE.txt"
]

[tool.poetry.dependencies]
python = "3.8 || 3.9 || ^3.10"
deepmerge = "1.0.1"
numpy = "^1.23.4"
rich = "^12.6.0"
pytest = "^7.2.0"
beartype = "^0.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
addopts = ["-rP"]
testpaths = [
    "tests",
]

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "F401",   # module imported but unused
    "F403",   # 'from module import *' unused; unable to detect undefined names
    "F405",   # name may be undefined, or defined from star imports
    "F841",   # local variable 'remote' is assigned to but never used
]
