[metadata]
name = pecs-framework
author = Jonathan Crum
author_email = crumja4@gmail.com
license = MIT
description = The ✨Respectably Muscled✨ Python Entity Component System
long_description = file: README.md
long_description_content_type = text/markdown
url = https://www.github.com/krummja/PECS
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Operating System :: OS Independent
    Programming Language :: Python :: Implementation :: CPython

[options]
packages = pecs
include_package_data = True
setup_requires = setuptools; setuptools_scm[toml]

[coverage:run]
relative_files = True
